--- a/bootstrap_stater/src/main/resources/templates/approval/appr_doc_list.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/appr_doc_list.html
@@ -11,7 +11,6 @@
 <body>
 <th:block layout:fragment="content">
     <div class="container-fluid">
-
         <!-- Page Heading -->
         <h1 class="h3 mb-2 text-gray-800">기안서작성</h1>
         <p class="mb-4">검색창</p>
@@ -56,9 +55,21 @@
                         </tbody>
                     </table>
                 </div>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">이전</a>
+                        </li>
+                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">다음</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
-
     </div>
     <!-- /.container-fluid -->
 
