--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -1,217 +1,216 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <!-- 공통 CSS 영역 -->
-    <!-- 정적 리소스(css, js 파일 등) 지정 시 루트(/) 기본 경로는 static -->
-    <!--    <link rel="stylesheet" th:href="@{/css/common.css}" />-->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>기안서 작성</title>
 
-    <title>기안서 작성</title>
+	<!-- Font Awesome -->
+	<link href="/bootstrap/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900" rel="stylesheet">
 
-    <!-- Custom fonts for this template-->
-    <link href="/bootstrap/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <!-- Custom styles for this template-->
-    <link href="/bootstrap/css/sb-admin-2.min.css" rel="stylesheet" />
+	<!-- SB Admin 2 (Bootstrap 4 기반) -->
+	<link href="/bootstrap/css/sb-admin-2.min.css" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
+	<!-- Bootstrap 4.6 -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
-    <!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
-    
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-	
-    <script src="/bootstrap/vendor/jquery/jquery.min.js"></script>
-    <script src="/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- Datetimepicker (Tempus Dominus BS4) -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tempusdominus-bootstrap-4@5.39.0/build/css/tempusdominus-bootstrap-4.min.css">
 
-    <!-- Core plugin JavaScript-->
-    <script src="/bootstrap/vendor/jquery-easing/jquery.easing.min.js"></script>
-	<script src="/bootstrap/js/sb-admin-2.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-	
-	<script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.js"></script>
-
+	<!-- Summernote (Bootstrap4 버전) -->
+	<link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-bs4.min.css" rel="stylesheet">
 </head>
 <body id="page-top">
 <div id="wrapper">
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
-        <!-- Main Content -->
-        <div id="content">
-            <div class="container-fluid">
-				
-				  <div class="panel panel-primary">
-				    <div class="panel-heading">
-				      <h3 class="panel-title">기안서작성 | 연차신청서(문서 id로 조회해서 보여주는곳)</h3>
-				    </div>
-				    <div class="panel-body">
-				      <form class="form-horizontal" th:action="@{/appr}" th:object="${apprDTO}" method="post" enctype="multipart/form-data">
-				      <input type="hidden1" th:field="*{reqType}" class="form-control" placeholder="문서타입"><!-- 문서타입 -->
-				        
-				        <div class="form-group">
-						  <label class="col-sm-2 control-label" for="createAt">기안일</label>
-						  <div class="col-sm-4">
-						    <div class="input-group date datepicker">
-						      <input type="text" class="form-control datepicker" id="createAt" th:field="*{createAt}" placeholder="YYYY-MM-DD" readonly required>
-						      <span class="input-group-addon">
-						        <span class="glyphicon glyphicon-calendar"></span>
-						      </span>
-						    </div>
-						  </div>
-						</div>
-				        
-				        <div class="form-group">
-				          <label class="col-sm-2 control-label">문서제목</label>
-				          <div class="col-sm-8">
-				            <input type="text" th:field="*{title}" class="form-control" maxlength="200" required>
-				          </div>
-				        </div>
-				
-				        <div class="form-group">
-				          <label class="col-sm-2 control-label">결재자</label>
-				          <div class="col-sm-8">
-				            <!-- <input type="text" th:field="*{approverId}" class="form-control"   style="width:150px; display:inline;"> -->
-				            <input type="text" class="form-control"   style="width:150px; display:inline;">
-				          </div>
-				        </div>
-				
-				        <div class="form-group">
-				          <label class="col-sm-2 control-label">휴가 종류</label>
-				          <div class="col-sm-2">
-				            <select class="form-control" th:field="*{reqType}">
-								<!-- 타임리프 템플릿 페이지에서 자바 클래스(enum 포함)를 직접 참조하는 방법 -->
-								<!-- ${T(패키지명.클래스명).메서드명()} -->
-								<!-- enum 타입의 values() 메서드 호출하여 모든 enum 값을 목록으로 표시(반복문 활용) -->
-								<!-- value 속성값은 반복 시 전달받은 enum 값을 그대로 사용, text 속성값은 enum 값의 label 필드값 사용 -->
-								<option th:each="rtype : ${T(com.bootstrap.study.approval.constant.ApprVacType).values()}"
-										th:value="${rtype}"
-										th:text="${rtype.label}"></option>
-							</select>
-				          </div>
-				        </div>
-				        
-				        <div class="form-group">
-						  <label class="col-sm-2 control-label" for="">기간 및 일시</label>
-						  <div class="col-sm-3">
-						    <div class="input-group date datepicker">
-						      <input type="text" class="form-control datepicker" id="createAt" th:field="*{createAt}" placeholder="YYYY-MM-DD" readonly required>
-						      <span class="input-group-addon">
-						        <span class="glyphicon glyphicon-calendar"></span>
-						      </span>
-						    </div>
-						  </div>
-						  
-						  <div class="col-sm-3">
-						    <div class="input-group date datepicker">
-						      <input type="text" class="form-control datepicker" id="createAt" th:field="*{createAt}" placeholder="YYYY-MM-DD" readonly required>
-						      <span class="input-group-addon">
-						        <span class="glyphicon glyphicon-calendar"></span>
-						      </span>
-						    </div>
-						  </div>
-						</div>
-						
-						<div class="form-group">
-				          <label class="col-sm-2 control-label">반차 여부</label>
-				          	<div class="col-sm-8">
-					          	<div class="input-group">
-					          	
-							        <input type="radio" th:field="*{ApprDetailDTOList[0].halfType}" value="STARTMORNING" class="halfTypeRadio" /> 시작 오전 반차
-<input type="radio" th:field="*{ApprDetailDTOList[1].halfType}" value="STARTAFTERNOON" class="halfTypeRadio" /> 시작 오후 반차
-<input type="radio" th:field="*{ApprDetailDTOList[2].halfType}" value="ENDMORNING" class="halfTypeRadio" /> 종료 오전 반차
-<input type="radio" th:field="*{ApprDetailDTOList[3].halfType}" value="ENDAFTERNOON" class="halfTypeRadio" /> 종료 오후 반차
+	<div id="content-wrapper" class="d-flex flex-column">
+		<div id="content">
+			<div class="container-fluid">
 
-<script>
-  const radios = document.querySelectorAll('.halfTypeRadio');
-  radios.forEach(radio => {
-    radio.addEventListener('change', () => {
-      radios.forEach(r => {
-        if(r !== radio) r.checked = false;
-      });
-    });
-  });
-</script>
+				<div class="card shadow mb-4">
+					<div class="card-header bg-primary text-white">
+						<h6 class="m-0 font-weight-bold">기안서작성 | 연차신청서</h6>
+					</div>
+					<div class="card-body">
 
-				          		</div>
-    				        </div>
-				        </div>
-				        
-				        <div class="form-group">
-				          <label class="col-sm-2 control-label">연차 일수</label>
-				          <div class="col-sm-8">
-				            <a href="#" class="btn btn-info">추가</a>
-				          </div>
-				        </div>
-				        
-				        <div class="form-group">
-				          <label class="col-sm-2 control-label">첨부</label>
-				          <div class="col-sm-8">
-				            <a href="#" class="btn btn-info">추가</a>
-				          </div>
-				        </div>
-				
-				        <div class="form-group">
-				          <div class="col-sm-offset-2 col-sm-10">
-				            <button type="submit" class="btn btn-primary">저장/결재(F7)</button>
-				            <!-- <button type="button" class="btn btn-default">미리보기</button>
-				            <button type="button" class="btn btn-default">양식샘플보기</button>
-				            <button type="button" class="btn btn-default">My도장/서명</button>
-				            <button type="button" class="btn btn-default">닫기</button> -->
-				          </div>
-				        </div>
-				        
-				        <div class="form-group">
-				          <label class="col-sm-2 control-label" for="summernote">에디터 내용</label>
-				          <div class="col-sm-8">
-				            <textarea class="form-control" id="summernote" th:field="*{content}" required></textarea>
-				          </div>
-				        </div>
-				      </form>
-				    </div>
-				  </div>
-            </div>
-        </div>
-    <!-- End of Main Content -->
-    </div>
-<!-- End of Content Wrapper -->
+						<form th:action="@{/appr}" th:object="${apprDTO}" method="post" enctype="multipart/form-data">
+							<input type="hidden" th:field="*{reqType}" />
+
+							<!-- 기안일 -->
+							<div class="form-group row">
+								<label for="createAt" class="col-sm-2 col-form-label">기안일</label>
+								<div class="col-sm-4">
+									<div class="input-group date" id="createAtPicker" data-target-input="nearest">
+										<input type="text" class="form-control datetimepicker-input" id="createAt"
+											   th:field="*{createAt}" data-target="#createAtPicker" readonly required>
+										<div class="input-group-append" data-target="#createAtPicker" data-toggle="datetimepicker">
+											<div class="input-group-text"><i class="fas fa-calendar-alt"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- 문서제목 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">문서제목</label>
+								<div class="col-sm-8">
+									<input type="text" th:field="*{title}" class="form-control" maxlength="200" required>
+								</div>
+							</div>
+
+							<!-- 결재자 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">결재자</label>
+								<div class="col-sm-8">
+									<p class="text-gray-600 mb-3">아래 버튼을 클릭하면 SB Admin 2/Bootstrap 4 모달(레이어 창)이 표시됩니다.</p>
+									<a href="#" class="btn btn-primary btn-icon-split" data-toggle="modal" data-target="#layerModal">
+										<span class="icon text-white-50"><i class="fas fa-external-link-alt"></i></span>
+										<span class="text">레이어 열기</span>
+									</a>
+								</div>
+							</div>
+
+							<!-- 휴가 종류 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">휴가 종류</label>
+								<div class="col-sm-2">
+									<select class="form-control" th:field="*{reqType}">
+										<option th:each="rtype : ${T(com.bootstrap.study.approval.constant.ApprVacType).values()}"
+												th:value="${rtype}" th:text="${rtype.label}"></option>
+									</select>
+								</div>
+							</div>
+
+							<!-- 기간 및 일시 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">기간 및 일시</label>
+								<div class="col-sm-3">
+									<div class="input-group date" id="startDate" data-target-input="nearest">
+										<input type="text" class="form-control datetimepicker-input" th:field="*{createAt}" data-target="#startDate" readonly required>
+										<div class="input-group-append" data-target="#startDate" data-toggle="datetimepicker">
+											<div class="input-group-text"><i class="fas fa-calendar-alt"></i></div>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-3">
+									<div class="input-group date" id="endDate" data-target-input="nearest">
+										<input type="text" class="form-control datetimepicker-input" th:field="*{createAt}" data-target="#endDate" readonly required>
+										<div class="input-group-append" data-target="#endDate" data-toggle="datetimepicker">
+											<div class="input-group-text"><i class="fas fa-calendar-alt"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- 반차 여부 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">반차 여부</label>
+								<div class="col-sm-8">
+									<div class="form-check form-check-inline" th:each="halfType : ${T(com.bootstrap.study.approval.constant.ApprHalfType).values()}">
+										<input class="form-check-input" type="radio" name="halfType" th:id="'halfType_' + ${halfType.name()}" th:value="${halfType}">
+										<label class="form-check-label" th:for="'halfType_' + ${halfType.name()}" th:text="${halfType.label}"></label>
+									</div>
+								</div>
+							</div>
+
+							<!-- 연차 일수 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">연차 일수</label>
+								<div class="col-sm-2">
+									<small>잔여연차</small>
+									<input type="text" class="form-control">
+								</div>
+								<div class="col-sm-2">
+									<small>신청연차</small>
+									<input type="text" class="form-control">
+								</div>
+							</div>
+
+							<!-- 첨부 -->
+							<div class="form-group row">
+								<label class="col-sm-2 col-form-label">첨부</label>
+								<div class="col-sm-8">
+									<a href="#" class="btn btn-info">추가</a>
+								</div>
+							</div>
+
+							<!-- 버튼 -->
+							<div class="form-group row">
+								<div class="col-sm-10 offset-sm-2">
+									<button type="submit" class="btn btn-primary">저장/결재(F7)</button>
+									<button type="button" class="btn btn-secondary">닫기</button>
+								</div>
+							</div>
+
+							<!-- 에디터 -->
+							<div class="form-group row">
+								<label for="summernote" class="col-sm-2 col-form-label">에디터 내용</label>
+								<div class="col-sm-8">
+									<textarea id="summernote" class="form-control" th:field="*{content}" required></textarea>
+								</div>
+							</div>
+						</form>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-<!-- End of Page Wrapper -->
+
+<!-- Modal -->
+<div class="modal fade" id="layerModal" tabindex="-1" role="dialog" aria-labelledby="layerModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered" role="document">
+		<div class="modal-content">
+			<div class="modal-header bg-primary py-3">
+				<h5 class="modal-title text-white" id="layerModalLabel"><i class="fas fa-info-circle mr-2"></i>SB Admin 2 레이어</h5>
+				<button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<p class="mb-2">이것은 SB Admin 2 테마 감성의 Bootstrap 4 모달 레이어입니다.</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+				<button type="button" class="btn btn-primary">확인</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/bootstrap/js/sb-admin-2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/tempusdominus-bootstrap-4@5.39.0/build/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-bs4.min.js"></script>
 
 <script>
-    $(function () {
-    	 $('.datepicker').datetimepicker({
-    	    format: 'YYYY-MM-DD',
-    	    locale: 'ko',
-    	    ignoreReadonly: true,
-    	    useCurrent: false,
-    	    showTodayButton: true
-    	  });
-    	  
-    	  $('#summernote').summernote({
-              tabsize: 2,
-              height: 120,
-              toolbar: [
-                  ['style', ['style']],
-                  ['font', ['bold', 'underline', 'clear']],
-                  ['color', ['color']],
-                  ['para', ['ul', 'ol', 'paragraph']],
-                  ['table', ['table']],
-                  ['insert', ['link', 'picture', 'video']],
-                  ['view', ['fullscreen', 'codeview', 'help']]
-              ]
-          });
-    	});
+	$(function () {
+		$('#createAtPicker, #startDate, #endDate').datetimepicker({
+			format: 'YYYY-MM-DD',
+			locale: 'ko'
+		});
+
+		$('#summernote').summernote({
+			tabsize: 2,
+			height: 200,
+			toolbar: [
+				['style', ['style']],
+				['font', ['bold', 'underline', 'clear']],
+				['color', ['color']],
+				['para', ['ul', 'ol', 'paragraph']],
+				['table', ['table']],
+				['insert', ['link', 'picture']],
+				['view', ['fullscreen', 'codeview', 'help']]
+			]
+		});
+	});
 </script>
+
 </body>
 </html>
