--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -89,7 +89,7 @@
 										<option th:each="dept : ${allDepartments}" th:value="${dept.comDtNm}" th:text="${dept.comDtNm + ' 일정'}"></option>
 									</th:block>
 									<th:block th:unless="${isAdmin}">
-										<option th:value="${empDeptName}" th:text="${empDeptName + ' 일정'}"></option>
+										<option th:value="${empDeptName}" th:text="${empDeptName}"></option>
 									</th:block>
 								</select>
 							</div>
@@ -108,17 +108,12 @@
 							<div class="form-group">
 								<label for="modalStartDate">시작일</label> <input type="date"
 									class="form-control" id="modalStartDate" name="startDate"
-									required> <label for="modalStartTime">시작시간</label> <input
-									type="time" class="form-control" id="modalStartTime"
-									name="starttimeAt" required>
+									required> 
 							</div>
 
 							<div class="form-group">
 								<label for="modalEndDate">종료일</label> <input type="date"
 									class="form-control" id="modalEndDate" name="endDate" required>
-								<label for="modalEndTime">종료시간</label> <input type="time"
-									class="form-control" id="modalEndTime" name="endtimeAt"
-									required>
 							</div>
 						</div>
 						<div class="modal-footer">
@@ -136,7 +131,7 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="scheduleDetailModalLabel">일정 상세</h5>
+						<h5 class="modal-title" id="scheduleDetailModalLabel">일정 보기</h5>
 						<button class="close" type="button" data-dismiss="modal"
 							aria-label="Close">
 							<span aria-hidden="true">×</span>
