--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -77,7 +77,7 @@
 										<th scope="row">
 											<label for="emp_yn" class="form-label">재직현황</label></th>
 										<td colspan="3">
-											<select id="emp_yn" name="status" class="form-select w-75">
+											<select id="emp_yn" name="staId" class="form-select w-75">
 												<th:block th:each=" status: ${status}">
 													<option  th:value="${status.comDtId}" th:text="${status.comDtNm}" th:selected="${status.comDtId == personnel.staId}"></option>
 												</th:block>
@@ -125,7 +125,7 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_lv" class="form-label">보안등급</label></th>
 										<td colspan="3">
-											<select id="emp_lv" name="level" class="form-select w-75">
+											<select id="emp_lv" name="levId" class="form-select w-75">
 												<option value="" >보안등급을 선택하세요</option>
 												<th:block th:each="level : ${level}">
 													<option th:value="${level.comDtId}" th:text="${level.comDtNm}"  th:selected="${level.comDtId == personnel.levId}" > 
