--- a/bootstrap_stater/src/main/resources/templates/approval/approval_List.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/approval_List.html
@@ -449,7 +449,10 @@
 		    
 		    fetch(API_ENDPOINTS.cancel(reqId), {
 		        method: 'POST',
-		        headers: { 'Content-Type': 'application/json' }
+		        headers: {
+		        	'Content-Type': 'application/json',
+		        	[csrfHeaderName]: csrfToken, // !!! csrf 토큰이 넘겨지지 않으면 인사발령 승인, 반려, 결재취소가 안돼서 일단 추가함!!! 
+		        }
 		    })
 		    .then(response => {
 		        if (!response.ok) {
@@ -734,9 +737,15 @@
        }
 
        function sendApprovalRequest(endpoint, comments, successMessage, actionKorean) {
+    	   const csrfToken = $('meta[name="_csrf"]').attr('content');
+    	   const csrfHeaderName = $('meta[name="_csrf_header"]').attr('content');
+    	   
            const requestOptions = {
                method: 'POST',
-               headers: { 'Content-Type': 'application/json' },
+               headers: {
+            	   'Content-Type': 'application/json',
+            	   [csrfHeaderName]: csrfToken, // !!! csrf 토큰이 넘겨지지 않으면 인사발령 승인, 반려, 결재취소가 안돼서 일단 추가함!!! 
+               },
                body: JSON.stringify({ comments })
            };
            
